# module

./: .clang-format  .clang-tidy  .clangd  .dvim.lua  .gitignore  CMakeLists.txt  Makefile
cmake/: CheckCompiler.cmake  CompileOptions.cmake  Flink.cmake  IPO.cmake  Testing.cmake
conan/: amd64-linux.profile  amd64-macos.profile  armv8-linux.profile  armv8-macos.profile
src/module/: CMakeLists.txt  Context.cpp  Context.h  Plugin.h  Storage.cpp  Storage.h  config.h  register.h
src/module/detail/: Bridge.h  Injector.h  Interface.h  Registerer.h  Traits.h  anon_var_name.h  any_type.h  constructor_traits.h  error.h  get.h  instance_of_template.h  make_traits.h  transform.h
tests/: CMakeLists.txt  unit.cpp
